--- a/.github/workflows/dvc-pipeline.yml
+++ b/.github/workflows/dvc-pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install dvc
+          pip install dvc dvc-s3
 
       # Шаг 4: Настройка DVC remote
       - name: Configure DVC remote
@@ -42,6 +42,6 @@ jobs:
       - name: Run DVC pipeline
         run: dvc repro
 
-      # Шаг 7: Загрузка данных в удаленное хранилище (опционально)
+      # Шаг 7: Загрузка данных в удаленное хранилище
       - name: Push data to remote storage
         run: dvc push
